# flydemo

./: Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: fly-deploy.yml  rust.yml
src/: api.rs  main.rs
