[package]
name = "flydemo"
version = "0.1.0"
edition = "2024"
authors = ["Ernesto Menéndez <pyalec@gmail.com>"]

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"]}
http-body-util = "0.1"
mime = "0.3"
serde_json = "1"
